--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="content">
         <div class="fade-in-container">
-            <img src="your-image.jpg" alt="Image" class="fade-in-image">
+            <img src="https://github.com/ahchu0515/ahchu555/raw/main/1.png?raw=true" alt="Image" class="fade-in-image">
             <p class="fade-in-text">테스트문장입니다.</p>
         </div>
     </div>
